--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -71,14 +71,19 @@
       }}
 
 #################DEBUG#################################################################
-- name: Dummy test structure (robust via search)
+- name: Dummy test structure (manual string search)
   set_fact:
     solution_structure: >-
       {%- set struct = {} -%}
       {%- for postfix, path in postfix_template_map.items() -%}
+        {%- set ns = None -%}
         {%- set lines = lookup('file', path).split('\n') -%}
-        {%- set name_line = lines | select('search', '^\\s*name\\s*:\\s*') | list | first | default('') -%}
-        {%- set ns = name_line.split(':', 1)[1] | trim | replace('"', '') if name_line else None -%}
+        {%- for line in lines -%}
+          {%- if 'name:' in line -%}
+            {%- set ns = line.split(':', 1)[1] | trim | replace('"', '') -%}
+            {%- break -%}
+          {%- endif -%}
+        {%- endfor -%}
         {%- set struct = struct | combine({postfix: {'namespace': ns}}) -%}
       {%- endfor -%}
       {{ struct }}
