--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -71,19 +71,15 @@
       }}
 
 #################DEBUG#################################################################
-- name: Dummy test structure (manual string search)
+- name: Dummy test structure (safe manual search without break)
   set_fact:
     solution_structure: >-
       {%- set struct = {} -%}
       {%- for postfix, path in postfix_template_map.items() -%}
-        {%- set ns = None -%}
-        {%- set lines = lookup('file', path).split('\n') -%}
-        {%- for line in lines -%}
-          {%- if 'name:' in line -%}
-            {%- set ns = line.split(':', 1)[1] | trim | replace('"', '') -%}
-            {%- break -%}
-          {%- endif -%}
-        {%- endfor -%}
+        {%- set lines = lookup('file', path).split('') -%}
+        {%- set name_lines = lines | select('search', 'name:') | list -%}
+        {%- set name_line = name_lines[0] if name_lines | length > 0 else None -%}
+        {%- set ns = name_line.split(':', 1)[1] | trim | replace('"', '') if name_line else None -%}
         {%- set struct = struct | combine({postfix: {'namespace': ns}}) -%}
       {%- endfor -%}
       {{ struct }}
