--- a/env-builder/ansible.cfg
+++ b/env-builder/ansible.cfg
@@ -3,6 +3,8 @@
 host_key_checking = False
 retry_files_enabled = False
 callback_whitelist = timer,profile_roles
+jinja2_trim_blocks = True
+jinja2_lstrip_blocks = True
 
 roles_path = roles
 inventory = hosts
