--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -1,15 +1,24 @@
 ---
 
-- name: Check if sd.yaml exists in {{ sd_output_dir }}/{{ sd_cluster_name }}/{{ sd_env }}/Inventory/solution-descriptor
+- name: Check if sd file exists in {{ sd_output_dir }}/{{ sd_cluster_name }}/{{ sd_env }}/Inventory/solution-descriptor
   stat:
-    path: "{{ sd_output_dir }}/{{ sd_cluster_name }}/{{ sd_env }}/Inventory/solution-descriptor/sd.yaml"
-  register: sd_file_existence
+    path: "{{ sd_output_dir }}/{{ sd_cluster_name }}/{{ sd_env }}/Inventory/solution-descriptor/sd.{{ item }}"
+  loop:
+    - yaml
+    - yml
+  register: sd_files_check
+  ignore_errors: yes
 
-- name: Load applications data from sd.yaml
+- name: Create a path for existing sd file
+  set_fact:
+    sd_file_path: "{{ sd_files_check.results | selectattr('stat.exists') | map(attribute='stat.path') | first }}"
+  when: sd_files_check is defined
+
+- name: Load applications data from sd.yaml/yml
   include_vars:
-    file: "{{ sd_output_dir }}/{{ sd_cluster_name }}/{{ sd_env }}/Inventory/solution-descriptor/sd.yaml"
+    file: "{{ sd_file_path }}"
     name: sd_config
-  when: sd_file_existence.stat.exists
+  when: sd_file_path is defined
 
 - name: Check that 'applications'-key exists
   assert:
@@ -18,7 +27,7 @@
       - "sd_config.applications is sequence"
     success_msg: "Root 'applications' key exists and is a list"
     fail_msg: "Missing or invalid 'applications' key in root"
-  when: sd_file_existence.stat.exists
+  when: sd_file_path is defined
 
 - name: Validate each application entry
   assert:
@@ -33,12 +42,12 @@
   loop: "{{ sd_config.applications }}"
   loop_control:
     label: "Application {{ item.version | default('unknown') }}"
-  when: sd_file_existence.stat.exists
+  when: sd_file_path is defined
 
 - name: All checks passed
   debug:
     msg: "All required fields are present and valid!"
-  when: sd_file_existence.stat.exists
+  when: sd_file_path is defined
 
 - name: Find all possible namespace templates
   no_log: True
@@ -50,7 +59,7 @@
       - "*.j2"
     use_regex: false
   register: all_template_files
-  when: sd_file_existence.stat.exists
+  when: sd_file_path is defined
 
 - name: Build template path map by deployPostfix
   set_fact:
@@ -66,12 +75,12 @@
         | map('first')
         | list
       }}
-  when: sd_file_existence.stat.exists
+  when: sd_file_path is defined
 
 - name: Initialize solution_structure
   set_fact:
     solution_structure: {}
-  when: sd_file_existence.stat.exists
+  when: sd_file_path is defined
 
 - name: Build solution_structure variable
   set_fact:
@@ -109,25 +118,25 @@
       } %}
 
       {{ small_dict | to_json }}
-  when: sd_file_existence.stat.exists
+  when: sd_file_path is defined
 
 - name: Update formatting in solution_structure variable
   set_fact:
     solution_structure: "{{ solution_structure | regex_replace('({{)\\s*([^}\\s]+)\\s*(}})', '\\1 \\2 \\3') }}"
-  when: sd_file_existence.stat.exists
+  when: sd_file_path is defined
 
 - name: Merge solution_structure into current_env
   no_log: True
   set_fact:
     current_env: "{{ current_env | combine({'solution_structure': solution_structure}, recursive=True) }}"
-  when: sd_file_existence.stat.exists
+  when: sd_file_path is defined
 
 - name: Pre-render the existing templates
   template:
     src: "{{ item.template_path }}"
     dest: "{{ item.template_path | regex_replace('\\.j2$', '') }}"
   loop: "{{ env_template_path }}"
-  when: current_env.solution_structure is defined and current_env.solution_structure != {} and sd_file_existence.stat.exists
+  when: current_env.solution_structure is defined and current_env.solution_structure != {} and sd_file_path is defined
 
 - name: Re-write existing templates
   copy:
@@ -136,11 +145,11 @@
     remote_src: yes
     force: yes
   loop: "{{ env_template_path }}"
-  when: current_env.solution_structure is defined and current_env.solution_structure != {} and sd_file_existence.stat.exists
+  when: current_env.solution_structure is defined and current_env.solution_structure != {} and sd_file_path is defined
 
 - name: Remove temporary created pre-rendered ymls
   file:
     path: "{{ item.template_path | regex_replace('\\.j2$', '') }}"
     state: absent
   loop: "{{ env_template_path }}"
-  when: current_env.solution_structure is defined and current_env.solution_structure != {} and sd_file_existence.stat.exists
+  when: current_env.solution_structure is defined and current_env.solution_structure != {} and sd_file_path is defined
