--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -12,13 +12,17 @@
 - name: Create a path for existing sd file
   set_fact:
     sd_file_path: "{{ sd_files_check.results | selectattr('stat.exists') | map(attribute='stat.path') | first }}"
-  when: sd_files_check is defined
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
 
 - name: Load applications data from sd.yaml/yml
   include_vars:
     file: "{{ sd_file_path }}"
     name: sd_config
-  when: sd_file_path is defined
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
 
 - name: Check that 'applications'-key exists
   assert:
@@ -27,7 +31,9 @@
       - "sd_config.applications is sequence"
     success_msg: "Root 'applications' key exists and is a list"
     fail_msg: "Missing or invalid 'applications' key in root"
-  when: sd_file_path is defined
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
 
 - name: Validate each application entry
   assert:
@@ -42,12 +48,16 @@
   loop: "{{ sd_config.applications }}"
   loop_control:
     label: "Application {{ item.version | default('unknown') }}"
-  when: sd_file_path is defined
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
 
 - name: All checks passed
   debug:
     msg: "All required fields are present and valid!"
-  when: sd_file_path is defined
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
 
 - name: Find all possible namespace templates
   no_log: True
@@ -59,7 +69,9 @@
       - "*.j2"
     use_regex: false
   register: all_template_files
-  when: sd_file_path is defined
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
 
 - name: Build template path map by deployPostfix
   set_fact:
@@ -75,13 +87,17 @@
         | map('first')
         | list
       }}
-  when: sd_file_path is defined
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
 
 - name: Initialize solution_structure
   no_log: True
   set_fact:
     solution_structure: {}
-  when: sd_file_path is defined
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
 
 - name: Build solution_structure variable
   no_log: True
@@ -120,32 +136,43 @@
       } %}
 
       {{ small_dict | to_json }}
-  when: sd_file_path is defined
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
 
 - name: Update formatting in solution_structure variable
   no_log: True
   set_fact:
     solution_structure: "{{ solution_structure | regex_replace('({{)\\s*([^}\\s]+)\\s*(}})', '\\1 \\2 \\3') }}"
-  when: sd_file_path is defined
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
 
 - name: Show solution_structure var
   debug:
     var: solution_structure
-  when: sd_file_path is defined
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
 
 
 - name: Merge solution_structure into current_env
   no_log: True
   set_fact:
     current_env: "{{ current_env | combine({'solution_structure': solution_structure}, recursive=True) }}"
-  when: sd_file_path is defined
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
 
 - name: Pre-render the existing templates
   template:
     src: "{{ item.template_path }}"
     dest: "{{ item.template_path | regex_replace('\\.j2$', '') }}"
   loop: "{{ env_template_path }}"
-  when: current_env.solution_structure is defined and current_env.solution_structure != {} and sd_file_path is defined
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
+    - current_env.solution_structure is defined and current_env.solution_structure != {}
 
 - name: Re-write existing templates
   copy:
@@ -154,11 +181,17 @@
     remote_src: yes
     force: yes
   loop: "{{ env_template_path }}"
-  when: current_env.solution_structure is defined and current_env.solution_structure != {} and sd_file_path is defined
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
+    - current_env.solution_structure is defined and current_env.solution_structure != {}
 
 - name: Remove temporary created pre-rendered ymls
   file:
     path: "{{ item.template_path | regex_replace('\\.j2$', '') }}"
     state: absent
   loop: "{{ env_template_path }}"
-  when: current_env.solution_structure is defined and current_env.solution_structure != {} and sd_file_path is defined
+  when:
+    - sd_files_check is defined
+    - (sd_files_check.results | selectattr('stat.exists') | list | length) > 0
+    - current_env.solution_structure is defined and current_env.solution_structure != {}
