--- a/test_data/test_environments/anru-test-01/e01/Inventory/env_definition.yml
+++ b/test_data/test_environments/anru-test-01/e01/Inventory/env_definition.yml
@@ -8,8 +8,7 @@ inventory:
 envTemplate:
   name: "dev"
   envSpecificParamsets:
-    cloud: ["cloud-specific","integrations","paramsetA" ]
-    main: ["internal-base-ns","toms-params","paramsetB" ]
+    bss: [ "env-specific-bss", "prod-shared" ]
   additionalTemplateVariables:
     key: "value"
   templateArtifact:
