Updated the envSpecificParams

--- a/test_data/test_environments/anru-test-01/e01/Inventory/env_definition.yml
+++ b/test_data/test_environments/anru-test-01/e01/Inventory/env_definition.yml
@@ -8,7 +8,7 @@ inventory:
 envTemplate:
   name: "dev"
   envSpecificParamsets:
-    bss: [ "env-specific-bss", "prod-shared" ]
+    bss: [ "bss-internal-integrations" ]
   additionalTemplateVariables:
     key: "value"
   templateArtifact:
