Fixing values for tests

--- a/test_data/test_environments/anru-test-01/e01/Namespaces/bss/namespace.yml
+++ b/test_data/test_environments/anru-test-01/e01/Namespaces/bss/namespace.yml
@@ -15,9 +15,8 @@ profile:
 deployParameters:
   BSS_NAMESPACE: "e01-bss"
   CORE_NAMESPACE: "e01-core"
-  ENVGENE_CONFIG_REF_NAME: "main"
+  ENVGENE_CONFIG_REF_NAME: ""
   ENVGENE_CONFIG_TAG: ""
-  test_parameter: "e01-bss"
 e2eParameters: {}
 technicalConfigurationParameters:
   BSS_NAMESPACE: "e01-bss"
