--- a/test_data/test_environments/anru-test-01/e01/Namespaces/core/namespace.yml
+++ b/test_data/test_environments/anru-test-01/e01/Namespaces/core/namespace.yml
@@ -15,7 +15,7 @@ profile:
 deployParameters:
   BSS_NAMESPACE: "e01-bss"
   CORE_NAMESPACE: "e01-core"
-  ENVGENE_CONFIG_REF_NAME: "main"
+  ENVGENE_CONFIG_REF_NAME: ""
   ENVGENE_CONFIG_TAG: ""
 e2eParameters: {}
 technicalConfigurationParameters:
