--- a/env-builder/main.yaml
+++ b/env-builder/main.yaml
@@ -164,3 +164,17 @@
       loop_control:
         loop_var: paramset_file
       when: paramset_templates.files | length > 0
+
+    - name: Render AppDef/RegDef templates
+      ansible.builtin.include_role:
+        name: render_appregdefs
+      vars:
+        cluster_name: "{{ cluster_name }}"
+      when:
+        - lookup('pipe', 'ls ' ~ templates_dir ~ '/appdefs/*.yml.j2 2>/dev/null') | length > 0
+          or lookup('pipe', 'ls ' ~ templates_dir ~ '/appdefs/*.yaml.j2 2>/dev/null') | length > 0
+          or lookup('pipe', 'ls ' ~ templates_dir ~ '/appdefs/*.j2 2>/dev/null') | length > 0
+          or lookup('pipe', 'ls ' ~ templates_dir ~ '/regdefs/*.yml.j2 2>/dev/null') | length > 0
+          or lookup('pipe', 'ls ' ~ templates_dir ~ '/regdefs/*.yaml.j2 2>/dev/null') | length > 0
+          or lookup('pipe', 'ls ' ~ templates_dir ~ '/regdefs/*.j2 2>/dev/null') | length > 0
+
