--- a/build_envgene/ansible/roles/build_env/tasks/03_upload_template.yaml
+++ b/build_envgene/ansible/roles/build_env/tasks/03_upload_template.yaml
@@ -9,7 +9,7 @@
     password:       "{{ repository_password }}"
     dest:           "{{ dd_dest }}"
     extension: json
-  when: ci_platform == "gitlab"
+  when: not (env_definition.envTemplate.template_download_zip | default(false) | bool)
 
 - name: Run maven artifact to find artifact version
   maven_artifact:
@@ -24,31 +24,31 @@
   no_log: false
   when:
     - version is search('SNAPSHOT')
-    - ci_platform == "gitlab"
+    - not (env_definition.envTemplate.template_download_zip | default(false) | bool)
   register: module_output
 
 - debug:
     var: module_output.version_dd
   when:
     - version is search('SNAPSHOT')
-    - ci_platform == "gitlab"
+    - not (env_definition.envTemplate.template_download_zip | default(false) | bool)
 
 - name: Set artifact version from snapshot
   set_fact:
     atrifact_latest_version: "{{ module_output.version_dd  | default(version) }}"
-  when: ci_platform == "gitlab"
+  when: not (env_definition.envTemplate.template_download_zip | default(false) | bool)
 
 - name: Lookup artifact version from downloaded artifact
   set_fact:
     atrifact_name_list: "{{ lookup('file',lookup('ansible.builtin.vars','dd_dest')) | from_json | json_query('configurations[0].artifacts[0].id')| split(':') }}"
-  when: ci_platform == "gitlab"
+  when: not (env_definition.envTemplate.template_download_zip | default(false) | bool)
 
 - name: Lookup template repository from downloaded artifact
   set_fact:
     template_repository_url: "{{ (lookup('file',lookup('ansible.builtin.vars','dd_dest')) | from_json | json_query('configurations[0].maven_repository')) or repository_url }}"
   when:
     - env_definition['envTemplate']['artifact'] is defined
-    - ci_platform == "gitlab"
+    - not (env_definition.envTemplate.template_download_zip | default(false) | bool)
 
 
 - name: Download a real artifact using Artifactory username/password
