Updated the ansible and builder for pipeline

--- a/github_workflows/env_instance_builder/.github/actions/download_artifact/action.yml
+++ b/github_workflows/env_instance_builder/.github/actions/download_artifact/action.yml
@@ -16,6 +16,11 @@ inputs:
     required: true
     type: string
 
+outputs:
+  artifact_id:
+    description: "The ID of the matched artifact"
+    value: ${{ steps.get-artifact.outputs.artifact_id }}
+
 runs:
   using: "composite"
   steps:
@@ -24,39 +29,35 @@ runs:
       shell: bash
       run: |
         ENV_ARTIFACT_NAME="${{ inputs.sanitized_name }}"
-
+        
         ARTIFACTS_JSON=$(curl -s \
-          -H "Authorization: Bearer ${{ github.token }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts")
-
-        MATCHING_ARTIFACT_ID=$(echo "$ARTIFACTS_JSON" | jq -r --arg name "$ENV_ARTIFACT_NAME" '
-          .artifacts
-          | map(select(.name | contains($name)))
-          | sort_by(.created_at)
-          | last
-          | .id
-        ')
-
-        if [ "$MATCHING_ARTIFACT_ID" = "null" ] || [ -z "$MATCHING_ARTIFACT_ID" ]; then
-          echo "Was not able to find artifact with name $ENV_ARTIFACT_NAME"
-          exit 1
+        -H "Authorization: Bearer ${{ github.token }}" \
+        -H "Accept: application/vnd.github.v3+json" \
+        "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts")
+        
+        MATCHING_ARTIFACT_ID=$(echo "$ARTIFACTS_JSON" |
+        awk "/\"name\": \"$ENV_ARTIFACT_NAME\"/,/\}/" |
+        grep '"id":' |
+        grep -o '[0-9]\{5,\}' |
+        head -n1)
+        
+        if [ -z "$MATCHING_ARTIFACT_ID" ]; then
+        echo "Was not able to find artifact with name $ENV_ARTIFACT_NAME"
+        exit 1
         fi
-
-        echo "artifact_id=$MATCHING_ARTIFACT_ID" >> $GITHUB_OUTPUT
-        echo "Found artifact ID: $MATCHING_ARTIFACT_ID (contains '$ENV_ARTIFACT_NAME' in its name)"
+        
+        echo "artifact_id=$MATCHING_ARTIFACT_ID" >> "$GITHUB_OUTPUT"
+        echo "Found artifact ID: $MATCHING_ARTIFACT_ID (contains '$ENV_ARTIFACT_NAME')"
 
     - name: Download & unzip artifact
       shell: bash
       run: |
-        ARTIFACT_URL="https://api.github.com/repos/${{ github.repository }}/actions/artifacts/${{ steps.get-artifact.outputs.artifact_id }}/zip"
-
+        ARTIFACT_ID="${{ steps.get-artifact.outputs.artifact_id }}"
+        ARTIFACT_URL="https://api.github.com/repos/${{ github.repository }}/actions/artifacts/${ARTIFACT_ID}/zip"
+        
         REDIRECT_URL=$(curl -L -s -o /dev/null -w "%{url_effective}" \
           -H "Authorization: Bearer ${{ github.token }}" \
           -H "Accept: application/vnd.github.v3+json" \
           "$ARTIFACT_URL")
-
+        
         curl -L -o artifact.zip "$REDIRECT_URL"
-
-        unzip -o artifact.zip -d "${{ inputs.project_dir }}/environments/${{ inputs.full_env }}"
-        rm artifact.zip
