Updated the entrypoint inside dockerimage

--- a/github_workflows/instance-repo-pipeline/Dockerfile
+++ b/github_workflows/instance-repo-pipeline/Dockerfile
@@ -6,3 +6,4 @@ COPY github_workflows/instance-repo-pipeline/.github /opt/github
 #-----------Stage 2-----------
 FROM scratch
 COPY --from=initial /opt/github /opt/github
+CMD ["sh", "-c", "sleep infinity"]
